[FIX] Global scores null
had bug where global scores would be null in parquet because there is no
run_id to join on.

Update tests to reflect this behaviour

--- a/sandbox/createFakeOSW.ipynb
+++ b/sandbox/createFakeOSW.ipynb
@@ -620,7 +620,7 @@
      "text": [
       "Progress of 'conversion to internal data representation':\n",
       "-- done [took 0.00 s (CPU), 0.00 s (Wall)] -- \n",
-      "TargetedFileConverter took 0.07 s (wall), 0.05 s (CPU), 0.00 s (system), 0.05 s (user); Peak Memory Usage: 135 MB.\n",
+      "TargetedFileConverter took 0.07 s (wall), 0.06 s (CPU), 0.01 s (system), 0.05 s (user); Peak Memory Usage: 135 MB.\n",
       "\n"
      ]
     }
@@ -722,7 +722,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3698470040>"
+       "<sqlite3.Cursor at 0x7f71f551db40>"
       ]
      },
      "execution_count": 9,
@@ -1101,7 +1101,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3698470040>"
+       "<sqlite3.Cursor at 0x7f71f551db40>"
       ]
      },
      "execution_count": 20,
@@ -1448,7 +1448,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3698470040>"
+       "<sqlite3.Cursor at 0x7f71f551db40>"
       ]
      },
      "execution_count": 24,
@@ -1896,7 +1896,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3698470040>"
+       "<sqlite3.Cursor at 0x7f71f551db40>"
       ]
      },
      "execution_count": 29,
@@ -2885,7 +2885,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3698470040>"
+       "<sqlite3.Cursor at 0x7f71f551db40>"
       ]
      },
      "execution_count": 38,
@@ -3103,7 +3103,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3698470040>"
+       "<sqlite3.Cursor at 0x7f71f551db40>"
       ]
      },
      "execution_count": 43,
@@ -3176,7 +3176,7 @@
     "score_peptide['QVALUE'] = [1] * len(peptide)\n",
     "score_peptide['PEP'] = [1] * len(peptide)\n",
     "score_peptide['CONTEXT'] = ['global'] * len(peptide)\n",
-    "score_peptide['RUN_ID'] = [1] * len(peptide)"
+    "#score_peptide['RUN_ID'] = # for global context there is no run"
    ]
   },
   {
@@ -3229,7 +3229,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3698470040>"
+       "<sqlite3.Cursor at 0x7f71f551db40>"
       ]
      },
      "execution_count": 50,
@@ -3383,7 +3383,6 @@
        "      <th>QVALUE</th>\n",
        "      <th>PEP</th>\n",
        "      <th>CONTEXT</th>\n",
-       "      <th>RUN_ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3395,7 +3394,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>global</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3405,7 +3403,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>global</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3415,17 +3412,16 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>global</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   PROTEIN_ID  SCORE  PVALUE  QVALUE  PEP CONTEXT  RUN_ID\n",
-       "0           2      2       1       1    1  global       1\n",
-       "1           1      1       1       1    1  global       1\n",
-       "2           0      0       1       1    1  global       1"
+       "   PROTEIN_ID  SCORE  PVALUE  QVALUE  PEP CONTEXT\n",
+       "0           2      2       1       1    1  global\n",
+       "1           1      1       1       1    1  global\n",
+       "2           0      0       1       1    1  global"
       ]
      },
      "execution_count": 54,
@@ -3440,7 +3436,7 @@
     "score_protein['QVALUE'] = [1] * len(protein)\n",
     "score_protein['PEP'] = [1] * len(protein)\n",
     "score_protein['CONTEXT'] = ['global'] * len(protein)\n",
-    "score_protein['RUN_ID'] = [1] * len(protein)\n",
+    "#score_protein['RUN_ID'] = #for global context there is no associated run\n",
     "score_protein"
    ]
   },
@@ -3461,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "ab6a68b5-f5db-46e7-95e8-6e98a69eb062",
    "metadata": {},
    "outputs": [],
